# Oshirase-MCP

./: .gitignore  Cargo.toml  GEMINI.md  NOTICE.md  Oshirase-MCP仕様書.md  README.md  TODO.md  gemini-extension.json  変数関数仕様書.md
.github/workflows/: build.yml  rename-assets.yml
docs/setup/: INTEGRATION.md
docs/superpowers/plans/: 2026-05-05-oshirase-mcp-implementation.md
docs/superpowers/specs/: 2026-05-05-oshirase-mcp-design.md
oshirase-mcp-server/: Cargo.toml  README.md  gemini-extension.json
src/: config.rs  main.rs  notifier.rs  test_imports.rs
