[package]
name = "oshirase-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP
mcp-sdk-rs = "0.1" # MCP SDK (Stdio対応)

# 通知
notify-rust = "4.11" # OSデスクトップ通知

# HTTP / Async
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# シリアライズ / 設定
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI引数
clap = { version = "4.5", features = ["derive"] }

# ディレクトリ管理
directories-next = "2.0"

