[package]
name = "oshirase-mcp"
version = "0.1.0"
edition = "2021"
description = "A MCP server for OS desktop and Discord notifications"
repository = "https://github.com/DovahkiinYuzuko/Oshirase-MCP"
license = "MIT"

[[bin]]
name = "oshirase-mcp"
path = "src/main.rs"

[dependencies]
# MCP
mcp-sdk-rs = "0.3.4"
serde_json = "1.0"

# 通知
notify-rust = "4.11" # OSデスクトップ通知

# HTTP / Async
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# シリアライズ / 設定
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"

# CLI引数
clap = { version = "4.5", features = ["derive"] }

# ディレクトリ管理
directories-next = "2.0"

